# Banco_Pruebas

./: .gitignore  Banco.sh  CMakeLists.txt  README.md  main.cpp  requirements.txt
DataScience/: IngPropulsion.ipynb
src/: Banco_Pruebas.cpp  Banco_Pruebas.h  main.cpp
src/DataScience/Engine/: 2024-01-02-03:34:23-EngineTest.cvs  Prueba.cvs  Prueba.eng
src/DataScience/PostProcess/: PropulsionEngineering.ipynb
src/MicroControllers/: Banco_Pruebas.ino
src/MicroControllers/Banco_Pruebas/: Banco_Pruebas.ino
src/Tools/: Motor.cpp  Motor.h  SerialReader.cpp  SerialReader.h  Uuid.h  serialReader.cpp  serialReader.h
src/Ui/Components/: Button.cpp  Button.h  LinearChart.cpp  LinearChart.h
src/Ui/Windows/: Login.cpp  Login.h  MainWindow.cpp  MainWindow.h
src/core/: SerialReader.cpp  SerialReader.h
src/ui/: MainWindow.cpp  MainWindow.h
src/ui/components/: Button.cpp  Button.h  CountDown.cpp  CountDown.h  LinearChart.cpp  LinearChart.h  StatusLed.cpp  StatusLed.h  TareWidget.cpp  TareWidget.h
src/ui/views/: GraphView.cpp  GraphView.h  Header.cpp  Header.h  SensorWidget.cpp  SensorWidget.h  StatusBattery.cpp  StatusBattery.h  StatusConnection.cpp  StatusConnection.h  StatusView.cpp  StatusView.h
